--- a/Master_post_patch.yaml
+++ b/Master_post_patch.yaml
@@ -4,43 +4,42 @@
   gather_facts: true
   ignore_errors: true
 
-  pre_tasks:       
-  - set_fact:
-      date_time: "{{ ansible_date_time.date}}_{{ansible_date_time.hour}}H-{{ansible_date_time.minute}}M-{{ansible_date_time.second}}S"   
-    run_once: true
-    delegate_to: localhost
+  pre_tasks:
+    - set_fact:
+        date_time: "{{ ansible_date_time.date}}_{{ansible_date_time.hour}}H-{{ansible_date_time.minute}}M-{{ansible_date_time.second}}S"
+      run_once: true
+      delegate_to: localhost
 
-    #- name: Creating directory to store windows updates log files in localhost
-    #file:
-            #path: /tmp/ansible_dir/win_updates_files/{{date_time}}
-     #state: directory
-     #run_once: true
-    #delegate_to: localhost
+      #- name: Creating directory to store windows updates log files in localhost
+      #file:
+      #path: /tmp/ansible_dir/win_updates_files/{{date_time}}
+      #state: directory
+      #run_once: true
+      #delegate_to: localhost
 
-  - name: Send pre-patch starting mail to team 
-    mail:
-     host: localhost 
-     port: 25
-     to: Vishnuvardhan <vishnu@example.com>
-     cc: Sarika Marathe <sarika@example.com>
-     subject: Post-Patch is starting
-     body: Hello Team!  Post-patch is starting
-    run_once: true
-    delegate_to: localhost
+  # - name: Send pre-patch starting mail to team
+  #   mail:
+  #    host: localhost
+  #    port: 25
+  #    to: Vishnuvardhan <vishnu@example.com>
+  #    cc: Sarika Marathe <sarika@example.com>
+  #    subject: Post-Patch is starting
+  #    body: Hello Team!  Post-patch is starting
+  #   run_once: true
+  #   delegate_to: localhost
 
   tasks:
-  - include_tasks: post_patch.yaml
+    - include_tasks: post_patch.yaml
 
-
-  post_tasks:  
-  - name: Send post-patch report to team
-    mail:
-      host: localhost
-      port: 25
-      to: Vishnuvardhan <vishnu@example.com>
-      cc: Sarika Marathe <sarika@example.com>
-      subject: Post-patch report
-      body: Hi team! Please find the attached post-patch report
-      attach: /tmp/ansible_dir/post_patch_output_files/{{date_time}}_post_patch.txt
-    run_once: true
-    delegate_to: localhost
+  post_tasks:
+  # - name: Send post-patch report to team
+  #   mail:
+  #     host: localhost
+  #     port: 25
+  #     to: Vishnuvardhan <vishnu@example.com>
+  #     cc: Sarika Marathe <sarika@example.com>
+  #     subject: Post-patch report
+  #     body: Hi team! Please find the attached post-patch report
+  #     attach: /tmp/ansible_dir/post_patch_output_files/{{date_time}}_post_patch.txt
+  #   run_once: true
+  #   delegate_to: localhost
