--- a/post_patch.yaml
+++ b/post_patch.yaml
@@ -38,20 +38,20 @@
 
   - name: Check if post-patch log exists
     stat:
-     path: /tmp/ansible_dir/post-patch-output-files/{{date_time}}_post_patch.txt
+     path: /ansible_dir/post_patch_output_files/{{date_time}}_post_patch.txt
     register: post_patch_log
 
   - name: Create post-patch log file if doesn't exist
     file:
-     path: /tmp/ansible_dir/post-patch-output-files/{{date_time}}_post-patch.txt
+     path: /ansible_dir/post_patch_output_files/{{date_time}}_post_patch.txt
      state: touch
-    check_mode: yes
+    become: yes
     when: not post_patch_log.stat.exists
     delegate_to: localhost
 
   - name: lineinfile module
     lineinfile:
             line: "Hostname: {{inventory_hostname}},CPU Utilisation: {{cpu_utilization.stdout_lines[0] | int }},Disk free space: {{disk_free_space}}, Count of  processess: {{process_list_count }}"
-            dest: /tmp/ansible_dir/post-patch-output-files/{{date_time}}_post-patch.txt
+            dest: /ansible_dir/post-patch-output-files/{{date_time}}_post_patch.txt
             insertbefore: EOF 
     delegate_to: localhost
