--- a/Master_windows_patching.yaml
+++ b/Master_windows_patching.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Master Post Patch Activities
+- name: Master Patching Activities
   hosts: windows
   gather_facts: true
   ignore_errors: true
@@ -10,29 +10,29 @@
       run_once: true
       delegate_to: localhost
 
-  # - name: Send post-patch starting mail to team
+  # - name: Send patching starting mail to team
   #   mail:
   #    host: localhost
   #    port: 25
   #    to: Vishnuvardhan <vishnu@example.com>
   #    cc: Sarika Marathe <sarika@example.com>
-  #    subject: Post-Patch is starting
-  #    body: Hello Team!  Post-patch is starting
+  #    subject: Patching is starting
+  #    body: Hello Team!  patching is starting
   #   run_once: true
   #   delegate_to: localhost
 
   tasks:
-    - include_tasks: post_patch.yaml
+    - include_tasks: windows_patching.yaml
 
   post_tasks:
-  # - name: Send post-patch report to team
+  # - name: Send patching report to team
   #   mail:
   #     host: localhost
   #     port: 25
   #     to: Vishnuvardhan <vishnu@example.com>
   #     cc: Sarika Marathe <sarika@example.com>
-  #     subject: Post-patch report
-  #     body: Hi team! Please find the attached post-patch report
-  #     attach: /tmp/ansible_dir/post_patch_output_files/{{date_time}}_post_patch.txt
+  #     subject: patching report
+  #     body: Hi team! Please find the attached patching report
+  #     attach: /tmp/ansible_dir/patching_output_files/{{date_time}}_windows_patch.txt
   #   run_once: true
   #   delegate_to: localhost
